add MP part to events