@@ -1,12 +1,11 @@
 package de.ur.service;
 
 import de.ur.dao.Constraint;
+import de.ur.dao.ConstraintCondition;
 import de.ur.dao.ConstraintStatus;
 import de.ur.dao.ConstraintType;
-import de.ur.dao.ConstraintCondition;
 import de.ur.dto.AllowedTaskResponse;
 import jakarta.enterprise.context.ApplicationScoped;
-import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.*;
@@ -18,84 +17,72 @@ import static de.ur.dao.ConstraintType.*;
 @ApplicationScoped
 @Slf4j
 public class AnalyzerService {
-    public Map<String, Object> checkFinishability(@NonNull List<Constraint> constraints) {
-        List<String> reasons = constraints.stream()
-                .filter(constraint -> {
-                    ConstraintStatus status = constraint.getStatus();
-                    return PERMANENT_VIOLATION.equals(status) || TEMPORARY_VIOLATION.equals(status);
-                })
-                .map(constraint -> {
-                    ConstraintStatus status = constraint.getStatus();
-                    String state = PERMANENT_VIOLATION.equals(status) ? "permanently" : "temporarily";
-                    return String.format("%s violated: %s (%s)", state, constraint.getName(), constraint.getType());
-                })
-                .toList();
+    public Map<String, Object> checkFinishability(List<Constraint> constraints) {
+        List<String> reasons = constraints.stream().filter(constraint -> {
+            ConstraintStatus status = constraint.getStatus();
+            return PERMANENT_VIOLATION.equals(status) || TEMPORARY_VIOLATION.equals(status);
+        }).map(constraint -> {
+            ConstraintStatus status = constraint.getStatus();
+            String state = PERMANENT_VIOLATION.equals(status) ? "permanently" : "temporarily";
+            return String.format("%s violated: %s (%s)", state, constraint.getName(), constraint.getType());
+        }).toList();
 
         boolean canFinish = reasons.isEmpty();
         log.debug("Finishability check: canFinish={}, reasons.size={}", canFinish, reasons.size());
         return Map.of("canFinish", canFinish, "reasons", reasons);
     }
 
-    @SuppressWarnings("unchecked")
-    public List<AllowedTaskResponse> analyzeAllowedTasks(@NonNull List<Constraint> constraints,
-                                                       @NonNull Set<String> possibleEvents,
-                                                       @NonNull List<Map<String, Object>> trace) {
+    public List<AllowedTaskResponse> analyzeAllowedTasks(List<Constraint> constraints, Set<String> possibleEvents, List<Map<String, Object>> trace) {
         if (constraints == null || possibleEvents == null || trace == null) {
             throw new IllegalArgumentException("Parameters cannot be null");
         }
-        return possibleEvents.stream()
-                .map(event -> {
-                    // Find all constraints that this event could potentially violate
-                    var relevantConstraints = constraints.stream()
-                            .filter(constraint -> {
-                                ConstraintStatus currentStatus = getStatusOrInit(constraint);
-                                return !FULFILLED.equals(currentStatus) && !PERMANENT_VIOLATION.equals(currentStatus);
-                            })
-                            .filter(constraint -> {
-                                // Check if this event is relevant to the constraint
-                                List<String> actEvents = getEventsFromField(constraint.getActivationEvent());
-                                List<String> trgEvents = getEventsFromField(constraint.getTargetEvent());
-                                return actEvents.contains(event) || trgEvents.contains(event);
-                            })
-                            .toList();
+        return possibleEvents.stream().map(event -> {
+            // Find all constraints that this event could potentially violate
+            var relevantConstraints = constraints.stream().filter(constraint -> {
+                ConstraintStatus currentStatus = getStatusOrInit(constraint);
+                return !FULFILLED.equals(currentStatus) && !PERMANENT_VIOLATION.equals(currentStatus);
+            }).filter(constraint -> {
+                // Check if this event is relevant to the constraint
+                List<String> actEvents = getEventsFromField(constraint.getActivationEvent());
+                List<String> trgEvents = getEventsFromField(constraint.getTargetEvent());
+                return actEvents.contains(event) || trgEvents.contains(event);
+            }).toList();
 
-                    // If no constraints apply, the event is safe
-                    if (relevantConstraints.isEmpty()) {
-                        log.debug("  [✓] Event '{}' is safe (no constraints apply).", event);
-                        return AllowedTaskResponse.safe(event);
+            // If no constraints apply, the event is safe
+            if (relevantConstraints.isEmpty()) {
+                log.debug("  [✓] Event '{}' is safe (no constraints apply).", event);
+                return AllowedTaskResponse.safe(event);
+            }
+
+            // Check each constraint to see if it would be violated
+            for (var constraint : relevantConstraints) {
+                ConstraintStatus status = getHypotheticalStatus(constraint, event, trace);
+                if (PERMANENT_VIOLATION.equals(status)) {
+                    // This event would violate the constraint - collect condition details
+                    Map<String, String> conditions = new HashMap<>();
+
+                    // Check if it's an activation or target event and get the corresponding condition
+                    List<String> actEvents = getEventsFromField(constraint.getActivationEvent());
+                    if (actEvents.contains(event) && constraint.getActivationCondition() != null) {
+                        var cond = constraint.getActivationCondition();
+                        conditions.put(cond.param(), cond.operator() + " " + cond.value());
                     }
 
-                    // Check each constraint to see if it would be violated
-                    for (var constraint : relevantConstraints) {
-                        ConstraintStatus status = getHypotheticalStatus(constraint, event, trace);
-                        if (PERMANENT_VIOLATION.equals(status)) {
-                            // This event would violate the constraint - collect condition details
-                            Map<String, String> conditions = new HashMap<>();
-                            
-                            // Check if it's an activation or target event and get the corresponding condition
-                            List<String> actEvents = getEventsFromField(constraint.getActivationEvent());
-                            if (actEvents.contains(event) && constraint.getActivationCondition() != null) {
-                                var cond = constraint.getActivationCondition();
-                                conditions.put(cond.param(), cond.operator() + " " + cond.value());
-                            }
-                            
-                            List<String> trgEvents = getEventsFromField(constraint.getTargetEvent());
-                            if (trgEvents.contains(event) && constraint.getTargetCondition() != null) {
-                                var cond = constraint.getTargetCondition();
-                                conditions.put(cond.param(), cond.operator() + " " + cond.value());
-                            }
-                            
-                            log.debug("  [!] Event '{}' is unsafe: violates {} ({}). Conditions: {}", 
-                                    event, constraint.getName(), constraint.getType(), conditions);
-                            return AllowedTaskResponse.unsafe(event, conditions);
-                        }
+                    List<String> trgEvents = getEventsFromField(constraint.getTargetEvent());
+                    if (trgEvents.contains(event) && constraint.getTargetCondition() != null) {
+                        var cond = constraint.getTargetCondition();
+                        conditions.put(cond.param(), cond.operator() + " " + cond.value());
                     }
-                    
-                    // If we get here, the event doesn't violate any constraints
-                    log.debug("  [✓] Event '{}' is safe (no violations).", event);
-                    return AllowedTaskResponse.safe(event);
-                })
-                .collect(Collectors.toList());
+
+                    log.debug("  [!] Event '{}' is unsafe: violates {} ({}). Conditions: {}", event, constraint.getName(), constraint.getType(), conditions);
+                    return AllowedTaskResponse.unsafe(event, conditions);
+                }
+            }
+
+            // If we get here, the event doesn't violate any constraints
+            log.debug("  [✓] Event '{}' is safe (no violations).", event);
+            return AllowedTaskResponse.safe(event);
+        }).collect(Collectors.toList());
     }
 
     private ConstraintStatus getStatusOrInit(Constraint constraint) {
@@ -106,25 +93,20 @@ public class AnalyzerService {
         if (eventField == null || eventField.trim().isEmpty()) {
             return Collections.emptyList();
         }
-        return Arrays.stream(eventField.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+        return Arrays.stream(eventField.split(",")).map(String::trim).filter(s -> !s.isEmpty()).collect(Collectors.toList());
     }
 
-    private boolean checkEventsWithConditions(@NonNull List<Map<String, Object>> trace, 
-                                           List<String> eventsToFind,
-                                           ConstraintCondition condition) {
+    private boolean checkEventsWithConditions(List<Map<String, Object>> trace, List<String> eventsToFind, ConstraintCondition condition) {
         if (trace.isEmpty() || eventsToFind == null || eventsToFind.isEmpty()) {
             return false;
         }
-        
+
         for (Map<String, Object> event : trace) {
             String eventType = (String) event.get("eventType");
             if (eventsToFind.contains(eventType)) {
                 // If there's a condition, check if it matches the payload
                 if (condition != null) {
-                    @SuppressWarnings("unchecked")
+
                     Map<String, String> payload = (Map<String, String>) event.get("payload");
                     if (payload == null || !matchesCondition(condition, payload)) {
                         continue;
@@ -144,7 +126,7 @@ public class AnalyzerService {
         if (actualValue == null) {
             return false; // Required parameter not in payload
         }
-        
+
         return switch (condition.operator()) {
             case "=" -> actualValue.equals(condition.value());
             case "!=" -> !actualValue.equals(condition.value());
@@ -199,20 +181,19 @@ public class AnalyzerService {
         boolean isAct = actEvents.contains(event);
         boolean isTrg = trgEvents.contains(event);
         boolean isDirectlyRelevant = isAct || isTrg;
-        
+
         // If we have conditions, we need to check if they match the event's payload
         if (isDirectlyRelevant && !trace.isEmpty()) {
-            Map<String, Object> lastEvent = trace.get(trace.size() - 1);
-            @SuppressWarnings("unchecked")
+            Map<String, Object> lastEvent = trace.getLast();
             Map<String, String> payload = (Map<String, String>) lastEvent.get("payload");
-            
+
             if (isAct && constraint.getActivationCondition() != null) {
                 isAct = matchesCondition(constraint.getActivationCondition(), payload);
             }
             if (isTrg && constraint.getTargetCondition() != null) {
                 isTrg = matchesCondition(constraint.getTargetCondition(), payload);
             }
-            
+
             isDirectlyRelevant = isAct || isTrg;
         }
 
@@ -249,7 +230,6 @@ public class AnalyzerService {
                                 String eventType = (String) traceEvent.get("eventType");
                                 if (actEvents.contains(eventType)) {
                                     if (constraint.getActivationCondition() != null) {
-                                        @SuppressWarnings("unchecked")
                                         Map<String, String> payload = (Map<String, String>) traceEvent.get("payload");
                                         if (payload == null || !matchesCondition(constraint.getActivationCondition(), payload)) {
                                             continue;
@@ -319,7 +299,6 @@ public class AnalyzerService {
                         if (actEvents.contains(eventType)) {
                             // If there's an activation condition, check if it matches
                             if (constraint.getActivationCondition() != null) {
-                                @SuppressWarnings("unchecked")
                                 Map<String, String> payload = (Map<String, String>) traceEvent.get("payload");
                                 if (payload != null && matchesCondition(constraint.getActivationCondition(), payload)) {
                                     hasMatchingActivation = true;
@@ -351,7 +330,6 @@ public class AnalyzerService {
                     if (actEvents.contains(lastEventType)) {
                         // Check condition if present
                         if (constraint.getActivationCondition() != null) {
-                            @SuppressWarnings("unchecked")
                             Map<String, String> payload = (Map<String, String>) lastEvent.get("payload");
                             if (payload == null || !matchesCondition(constraint.getActivationCondition(), payload)) {
                                 yield PERMANENT_VIOLATION;
@@ -402,7 +380,6 @@ public class AnalyzerService {
                 }
                 yield currentStatus;
             }
-
             default -> currentStatus;
         };
     }
